# rustsoko

./: .gitignore  Cargo.toml  LICENSE  README.md  log.txt  test_puzzle0  test_puzzle1  test_puzzle2  test_puzzle3  test_puzzle5
src/: app.rs  backup.rs  ida_star_solver.rs  level_generator.rs  level_reader.rs  main copy.rs  main.rs  types.rs  util.rs
src/app/: windows.rs
src/gui/: util.rs
