[package]
name = "cmpt310-sokoban-solver"
version = "0.1.0"
authors = ["geb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
crossterm = "0.17"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }
